Fix theme color on mobile safari

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,12 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  font-family: "Helvetica Neue", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+body,
+html {
+  font-family: "Helvetica Neue", system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
   font-size: 18px;
   -webkit-app-region: drag;
   caret-color: #3f67e0;
+  margin: 0;
+  padding: 0;
   @apply text-[#28282b] dark:text-[#f8fafc] bg-[#f8fafc] dark:bg-[#28282b];
 }
 
@@ -54,11 +58,11 @@ button {
 }
 
 .ProseMirror h1 {
-  @apply text-4xl font-bold
+  @apply text-4xl font-bold;
 }
 
 .ProseMirror h2 {
-  @apply text-2xl font-bold
+  @apply text-2xl font-bold;
 }
 
 .ProseMirror code {
@@ -87,8 +91,8 @@ button {
 
 .ProseMirror blockquote {
   padding-left: 1rem;
-  margin-top: 2rem ;
-  margin-bottom: 2rem ;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
   @apply border-l-[3px] border-l-gray-300 dark:border-l-[#7d7d7d];
 }
 
@@ -180,56 +184,55 @@ ul[data-placeholder] {
   padding: 0.1rem 0.3rem;
 }
 
-
 /* CODE */
 .hljs-comment,
-    .hljs-quote {
-      color: #616161;
-    }
+.hljs-quote {
+  color: #616161;
+}
 
-    .hljs-variable,
-    .hljs-template-variable,
-    .hljs-attribute,
-    .hljs-tag,
-    .hljs-name,
-    .hljs-regexp,
-    .hljs-link,
-    .hljs-name,
-    .hljs-selector-id,
-    .hljs-selector-class {
-      color: #f98181;
-    }
+.hljs-variable,
+.hljs-template-variable,
+.hljs-attribute,
+.hljs-tag,
+.hljs-name,
+.hljs-regexp,
+.hljs-link,
+.hljs-name,
+.hljs-selector-id,
+.hljs-selector-class {
+  color: #f98181;
+}
 
-    .hljs-number,
-    .hljs-meta,
-    .hljs-built_in,
-    .hljs-builtin-name,
-    .hljs-literal,
-    .hljs-type,
-    .hljs-params {
-      color: #fbbc88;
-    }
+.hljs-number,
+.hljs-meta,
+.hljs-built_in,
+.hljs-builtin-name,
+.hljs-literal,
+.hljs-type,
+.hljs-params {
+  color: #fbbc88;
+}
 
-    .hljs-string,
-    .hljs-symbol,
-    .hljs-bullet {
-      color: #b9f18d;
-    }
+.hljs-string,
+.hljs-symbol,
+.hljs-bullet {
+  color: #b9f18d;
+}
 
-    .hljs-title,
-    .hljs-section {
-      color: #faf594;
-    }
+.hljs-title,
+.hljs-section {
+  color: #faf594;
+}
 
-    .hljs-keyword,
-    .hljs-selector-tag {
-      color: #70cff8;
-    }
+.hljs-keyword,
+.hljs-selector-tag {
+  color: #70cff8;
+}
 
-    .hljs-emphasis {
-      font-style: italic;
-    }
+.hljs-emphasis {
+  font-style: italic;
+}
 
-    .hljs-strong {
-      font-weight: 700;
-    }
+.hljs-strong {
+  font-weight: 700;
+}
